<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toppanel1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/btn_red"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/header_ll_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:minWidth="45dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/header_img_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="12dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_header_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_live_preview"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/h10" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:onClick="onClick"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorTextWhite"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toppanel1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:onClick="onClick"
                fresco:actualImageScaleType="centerCrop"
                fresco:placeholderImage="@drawable/pic_live"
                fresco:placeholderImageScaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/live_ic_add_avartar" />

                <TextView
                    android:id="@+id/tv_pic_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:gravity="center"
                    android:text="@string/text_live_add_title_tips"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>

        <EditText
            android:id="@+id/live_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:hint="@string/text_live_title_input"
            android:lines="1"
            android:maxLength="32"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:textColor="#4A4A4A"
            android:textColorHint="#737373"
            android:textSize="17sp" />

        <com.bj.eduteacher.widget.LineControllerView
            android:id="@+id/lcv_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onClick"
            app:canNav="true"
            app:isBottom="true"
            app:name="@string/str_dt_change_role" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_publish"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/btn_red"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/text_publish"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/h8" />
</RelativeLayout>
