<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/loading"
              android:layout_width="@dimen/alert_width"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@drawable/dialog_background"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/dialog_network_title"
        android:textColor="#575757"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="#66000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_network_cancel"
            android:textColor="#FE5722"
            android:textSize="14sp"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#66000000"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_network_go"
            android:textColor="#FE5722"
            android:textSize="14sp"/>
    </LinearLayout>
</LinearLayout>